Archive2/9d/a383dcb4d67f99/output
In file included from /usr/local/include/boost/random/linear_congruential.hpp:32:0,
                 from /usr/local/include/boost/random/additive_combine.hpp:27,
                 from /usr/local/include/boost/random.hpp:36,
                 from /usr/local/include/boost/multiprecision/random.hpp:31,
                 from main.cpp:1:
/usr/local/include/boost/random/detail/seed_impl.hpp: In instantiation of 'void boost::random::detail::seed_array_int_impl(SeedSeq&, UIntType (&)[n]) [with int w = 32; long unsigned int n = 624ul; SeedSeq = const boost::multiprecision::number<boost::multiprecision::backends::cpp_int_backend<>, (boost::multiprecision::expression_template_option)0u>; UIntType = unsigned int]':
/usr/local/include/boost/random/detail/seed_impl.hpp:291:27:   required from 'void boost::random::detail::seed_array_int_impl(SeedSeq&, IntType (&)[n], mpl_::false_) [with int w = 32; long unsigned int n = 624ul; SeedSeq = const boost::multiprecision::number<boost::multiprecision::backends::cpp_int_backend<>, (boost::multiprecision::expression_template_option)0u>; IntType = unsigned int; mpl_::false_ = mpl_::bool_<false>]'
/usr/local/include/boost/random/detail/seed_impl.hpp:297:27:   required from 'void boost::random::detail::seed_array_int(SeedSeq&, IntType (&)[n]) [with int w = 32; long unsigned int n = 624ul; SeedSeq = const boost::multiprecision::number<boost::multiprecision::backends::cpp_int_backend<>, (boost::multiprecision::expression_template_option)0u>; IntType = unsigned int]'
/usr/local/include/boost/random/mersenne_twister.hpp:160:34:   required from 'void boost::random::mersenne_twister_engine<UIntType, w, n, m, r, a, u, d, s, b, t, c, l, f>::seed(SeeqSeq&, typename boost::random::detail::disable_seed<SeedSeq>::type*) [with SeeqSeq = const boost::multiprecision::number<boost::multiprecision::backends::cpp_int_backend<>, (boost::multiprecision::expression_template_option)0u>; UIntType = unsigned int; long unsigned int w = 32ul; long unsigned int n = 624ul; long unsigned int m = 397ul; long unsigned int r = 31ul; UIntType a = 2567483615u; long unsigned int u = 11ul; UIntType d = 4294967295u; long unsigned int s = 7ul; UIntType b = 2636928640u; long unsigned int t = 15ul; UIntType c = 4022730752u; long unsigned int l = 18ul; UIntType f = 1812433253u; typename boost::random::detail::disable_seed<SeedSeq>::type = void]'
/usr/local/include/boost/multiprecision/random.hpp:84:7:   required from 'void boost::random::independent_bits_engine<Engine, w, boost::multiprecision::number<T2, ExpressionTemplates2> >::seed(const result_type&) [with Engine = boost::random::mersenne_twister_engine<unsigned int, 32ul, 624ul, 397ul, 31ul, 2567483615u, 11ul, 4294967295u, 7ul, 2636928640u, 15ul, 4022730752u, 18ul, 1812433253u>; long unsigned int w = 166ul; Backend = boost::multiprecision::backends::cpp_int_backend<>; boost::multiprecision::expression_template_option ExpressionTemplates = (boost::multiprecision::expression_template_option)0u; boost::random::independent_bits_engine<Engine, w, boost::multiprecision::number<T2, ExpressionTemplates2> >::result_type = boost::multiprecision::number<boost::multiprecision::backends::cpp_int_backend<>, (boost::multiprecision::expression_template_option)0u>]'
main.cpp:15:15:   required from here
/usr/local/include/boost/random/detail/seed_impl.hpp:271:5: error: 'const class boost::multiprecision::number<boost::multiprecision::backends::cpp_int_backend<>, (boost::multiprecision::expression_template_option)0u>' has no member named 'generate'
     seq.generate(&storage[0], &storage[0] + ((w+31)/32) * n);
     ^
